# libpslog

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md
bench/: README.md  bench_fixture.c  bench_fixture.h  bench_liblogger.c  bench_liblogger.h  bench_liblogger_stub.c  bench_main.c  bench_production_data_generated.c  bench_production_dataset.c  bench_quill.cpp  bench_quill.h  bench_quill_stub.c  gen_go_production_dataset.c  run_perf_gate.sh  run_rebaseline.sh
cmake/: clean.cmake  package_archive.cmake  package_checksums.cmake  package_clean_dist.cmake  package_dev.cmake  package_runtime.cmake  package_single_header.cmake  pslog_single_header_preamble.in  pslog_version.cmake
cmake/toolchains/: linux-aarch64-gnu.cmake  linux-aarch64-musl.cmake  linux-armhf-gnu.cmake  linux-armhf-musl.cmake  linux-x86_64-musl.cmake
examples/: .gitignore  README.md  demo.c  demo.tape  example.c
fuzz/: pslog_fuzz.c
gobencher/: README.md  go.mod  go.sum
gobencher/benchmark/: cgo_stubs_nocgo.go  compare_bench_test.go  cpslog.go  cpslog_kvfmt.go  cpslog_kvfmt_generated.go  dataset.go  dataset_test.go  liblogger.go  lua_pslog.go  lua_pslog_test.go  quill.go  quill_test.go  sink.go  variants.go
gobencher/cmd/elevatorpitch/: .gitignore  main.go  pitch.tape
gobencher/cmd/gen_cbenchdata/: main.go
gobencher/cmd/gen_ckvfmt_wrappers/: main.go
include/: pslog.h  pslog_version.h.in
lua/: README.md  lua-pslog.rockspec.in
lua/examples/: basic.lua  callback.lua  example.lua  from_env.lua
lua/pslog/: init.lua
lua/scripts/: release_version.sh  render_release_rockspec.sh
lua/src/: pslog_lua.c
lua/tests/: test_pslog.lua
performance-logs/: README.md  pure-c-after-f10ec2b-perf-iter-median-summary.txt  pure-c-after-f10ec2b-perf-iter-runs.txt  pure-c-after-kvfmt-pointer-cache-shorter-fix-median-summary.txt  pure-c-after-kvfmt-pointer-cache-shorter-fix-summary.txt  pure-c-after-kvfmt-pointer-cache-shorter-fix.txt  pure-c-after-p1-default-tee-lifetime.txt  pure-c-after-p1-kvfmt-cache-race.txt  pure-c-after-p1-kvfmt-prefix-overflow.txt  pure-c-after-p1-tee-partial-write.txt  pure-c-after-p2-json-utf8.txt  pure-c-after-review-fixes-median-summary.txt  pure-c-after-review-fixes-runs.txt  pure-c-baseline-vs-final-summary.txt  pure-c-current-iter.txt  pure-c-final-taskset-c0.txt
scripts/: clean.sh  coverage_report.sh  dist-tree.sh  run_linux_release_matrix.sh
src/: pslog.c  pslog_emit_console.c  pslog_emit_json.c  pslog_internal.h  pslog_palette.c
tests/: c_only_configure_test.cmake  clean_script_test.cmake  example_integration_test.cmake  package_archives_test.cmake  test_main.c  test_main_single_header.c  version_resolution_probe.cmake  version_resolution_test.cmake
